# thesaurust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  release.yml  rust.yml
src/: api_key.rs  app.rs  banner.rs  client.rs  consts.rs  data.rs  errors.rs  event.rs  keys.rs  lib.rs  list.rs  main.rs  protocol.rs  selection.rs  tui.rs  ui.rs  utils.rs
src/client/: dictionary.rs  suggester.rs
src/components/: banner_block.rs  definition_block.rs  example_block.rs  footer.rs  mod.rs  part_of_speech_block.rs  popup.rs  search_bar.rs  synonym_block.rs
src/models/: app.rs  data.rs  errors.rs  input_mode.rs  list.rs  mod.rs  thesaurus.rs  word_suggestion.rs
src/protocol/: data.rs
src/tests/: results.rs
src/ui/: definition_block.rs  example_block.rs  part_of_speech_block.rs  search_bar.rs
