[package]
name = "thesaurust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.106"
serde_derive = "1.0.187"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
ratatui = "0.29.0"
anyhow = "1.0.75"
tui-input = "0.12.0"
serpapi-search-rust = "0.1.0"
dotenvy = "0.15.7"
thiserror = "2.0.12"
mockito = "1.7.0"
apply = "0.3.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[package.metadata.cargo-machete]
ignored = ["serde"]

