[package]
name = "cargo-thesaurust"
version = "0.1.1"
edition = "2021"
authors = ["Moreen Ho <pigeon@quietpigeon.com>"]
homepage = "https://moreenh.me/pages/projects/cargo-thesaurust"
description = "A terminal-based dictionary app."
readme = "README.md"
repository = "https://github.com/quietpigeon/cargo-thesaurust"
license = "MIT"
keywords = ["ratatui", "dictionary", "tui", "terminal", "thesaurus"]
exclude = ["docs/*"]

[[bin]]
name = "thesaurust"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.106"
serde_derive = "1.0.187"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
ratatui = "0.29.0"
anyhow = "1.0.75"
tui-input = "0.12.0"
dotenvy = "0.15.7"
thiserror = "2.0.12"
apply = "0.3.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
mockito = "1.7.0"

[package.metadata.cargo-machete]
ignored = ["serde"]

